<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/data_list_item_padding"
    android:background="@drawable/layout_round_corner"
    android:layout_margin="@dimen/data_list_item_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/source_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/text_holder"/>

    <TextView
        android:id="@+id/source_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_holder"
        android:textStyle="bold"
        android:textSize="@dimen/big_text_size"/>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/data_list_item_padding"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Headline"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:paddingRight="4sp"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:id="@+id/source_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_holder"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Country"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:paddingRight="4sp"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:id="@+id/country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_holder"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:paddingRight="4sp"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:id="@+id/country_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_holder"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>